fix overflow problem timeline

--- a/sass/styles-timeline.scss
+++ b/sass/styles-timeline.scss
@@ -13,10 +13,10 @@ $accent: #8d2a75;
 //     padding: 100px 0;
 // } // revisar
 
-// html, body {
-//     overflow-x: hidden;
-//     padding: 0;
-// }
+html, body {
+    overflow-x: hidden;
+    padding: 0;
+}
 
 // body {
 //     //font-family: 'Roboto';
@@ -31,10 +31,10 @@ $accent: #8d2a75;
 
 
 
-.container {
-    margin: auto;
-    max-width: 100%;
-}
+// .container {
+//     margin: auto;
+//     max-width: 100%;
+// }
 
 
 .timeline {
